@startuml class-diagram
!include theme.puml
!pragma layout smetana
title Class Diagram — AIBID Core Domain Model

class Organization {
  +id : string
  +name : string
  +industry : string
  +size : string
}

class User {
  +id : string
  +name : string
  +email : string
  +role : admin | analyst
  +subscriptionStatus : string
}

class Company {
  +id : string
  +name : string
  +industry : string
  +country : string
}

class Contact {
  +id : string
  +firstName : string
  +lastName : string
  +lifecycleStage : string
  +source : string
}

class PipelineStage {
  +id : string
  +name : string
  +probability : number
  +isWon : boolean
}

class Deal {
  +id : string
  +title : string
  +value : number
  +expectedCloseDate : date
}

class Activity {
  +id : string
  +type : string
  +subject : string
  +isCompleted : boolean
}

class Campaign {
  +id : string
  +name : string
  +type : string
  +status : string
}

class CampaignMetric {
  +date : date
  +impressions : number
  +clicks : number
  +conversions : number
  +revenue : number
}

class AIConversation {
  +id : string
  +title : string
}

class AIMessage {
  +id : string
  +role : string
  +content : string
}

class AIInsight {
  +id : string
  +type : string
  +confidence : number
  +impact : string
}

class DataSource {
  +id : string
  +name : string
  +type : string
  +qualityScore : number
}

class Report {
  +id : string
  +title : string
  +type : string
  +status : string
}

class AuditLog {
  +id : string
  +action : string
  +module : string
}

' ---- Relationships ----
Organization "1" -- "*" User
Organization "1" -- "*" Company
Organization "1" -- "*" Contact
Organization "1" -- "*" Campaign
Organization "1" -- "*" AIInsight
Organization "1" -- "*" DataSource
Organization "1" -- "*" Report
Organization "1" -- "*" AuditLog

Company "1" -- "*" Contact
Contact "1" -- "*" Deal
Company "1" -- "*" Deal
PipelineStage "1" -- "*" Deal
User "1" -- "*" Deal : owns >

Contact "1" -- "*" Activity
Deal "1" -- "*" Activity
User "1" -- "*" Activity

Campaign "1" -- "*" CampaignMetric
Contact "*" -- "*" Campaign

User "1" -- "*" AIConversation
AIConversation "1" -- "*" AIMessage
User "1" -- "*" AuditLog

@enduml
